--- a/SocialLunch/app/build.gradle
+++ b/SocialLunch/app/build.gradle
@@ -17,9 +17,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+}
+
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile files('libs/codepath-oauth-0.4.1.jar')
+    compile files('libs/codepath-utils.jar')
+    compile files('libs/scribe-codepath-0.0.3.jar')
+    compile 'com.github.kikoso:SwipeableCards:1.1-RELEASE@aar'
 }
