--- a/SocialLunch/app/build.gradle
+++ b/SocialLunch/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.sociallunch.sociallunch"
+        applicationId "com.sociallunch.android"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
