--- a/SocialLunch/app/build.gradle
+++ b/SocialLunch/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
+
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
@@ -37,4 +43,5 @@ dependencies {
     compile files('libs/codepath-utils.jar')
     compile files('libs/scribe-codepath-0.0.3.jar')
     compile 'com.github.kikoso:SwipeableCards:1.1-RELEASE@aar'
+    compile 'com.firebase:firebase-client-android:2.0.3+'
 }
