--- a/SocialLunch/app/build.gradle
+++ b/SocialLunch/app/build.gradle
@@ -36,6 +36,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
