--- a/SocialLunch/app/build.gradle
+++ b/SocialLunch/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile files('libs/scribe-codepath-0.0.3.jar')
     compile 'com.github.kikoso:SwipeableCards:1.1-RELEASE@aar'
     compile 'com.firebase:firebase-client-android:2.0.3+'
+    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     // Sliding view pager
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
