--- a/SocialLunch/app/src/main/AndroidManifest.xml
+++ b/SocialLunch/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         </activity>
         <activity
             android:name=".activities.ChatActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan"
             android:label="@string/title_activity_chat" >
         </activity>
         <activity
