--- a/SocialLunch/app/src/main/AndroidManifest.xml
+++ b/SocialLunch/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
         <activity
             android:name=".activities.ChatActivity"
             android:label="@string/title_activity_chat"
-            android:windowSoftInputMode="stateHidden|adjustPan" />
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
