--- a/SocialLunch/app/src/main/AndroidManifest.xml
+++ b/SocialLunch/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyD6WZagVkA8lmgjh1F9T-kdrwomTJQJO3M" />
+            android:value="@string/google_maps_api_key" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
